--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
+    "@nuxt/types": "~2.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5"
